--- a/blogspot.html
+++ b/blogspot.html
@@ -4,7 +4,11 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>aqui vamos hacer un blog post</h1>
-        <p>y este es el parrafo de inicio</p>
+        <div id="container">
+            <div id="post">
+                <h1>NUEVO TITULO</h1>
+                <p>Este es el nuevo parrafo de inicio</p> 
+            </div>
+        </div>
     </body>
 </html>
