--- a/blogspot.html
+++ b/blogspot.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                cabecera
+            </div>
             <div id="post">
                 <h1>NUEVO TITULO</h1>
                 <p>Este es el nuevo parrafo de inicio</p> 
