agregado el contenido extra del blog y una mejor tipografia

--- a/blogspot.html
+++ b/blogspot.html
@@ -8,6 +8,7 @@
             <div id="post">
                 <h1>NUEVO TITULO</h1>
                 <p>Este es el nuevo parrafo de inicio</p> 
+                <p>Los blogs son la mejor forma para compartir información</p>
             </div>
         </div>
     </body>
