--- a/blogspot.html
+++ b/blogspot.html
@@ -11,7 +11,7 @@
             </div>
             <div id="post">
                 <h1>LABRADOR</h1>
-                <p>El labrador retriever (conocido también como cobrador de Labrador1​o perdiguero de Labrador2​) es una raza canina originaria de Terranova, en la actual Canadá. Es una de las razas más populares del mundo por la cantidad de ejemplares registrados</p> 
+                <p>El labrador retriever, es una raza canina originaria de Terranova, en la actual Canadá. Es una de las razas más populares del mundo por la cantidad de ejemplares registrados</p> 
                 <p>Su excepcional afabilidad, gentileza, inteligencia, nobleza, energía y bondad,5​ hacen que los labradores sean generalmente considerados como buenos compañeros para personas de todas las edades, así como fiables perros trabajadores, comúnmente formando parte de las brigadas caninas de la policía en operativos antidroga, antiexplosivos, de búsqueda y rescate, entre otros. Con adiestramiento, el labrador es una de las razas de perro más dócil, obediente y talentosa que existen</p>
             </div>
         </div>
