--- a/blogspot.html
+++ b/blogspot.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 ALEblog 
-                <spani id="tagline">Tu blog de maestro</span>
+                <spani id="tagline">Tu blog maestro 2.0</span>
             </div>
             <div id="post">
                 <h1>LABRADOR</h1>
